tests/fixtures/pass/raw_pointer_offset_shared.sali
let main(): i32 = {
  let value = 42
  let pointer = Ptr(borrow value)
  let same = unsafe do {
    raw_offset(pointer, 0)
  }
  unsafe do {
    *same
  }
}
